concord_examples/tests/ui/missing_placeholder_type.stderr
error: expected `:`
  --> tests/ui/missing_placeholder_type.rs:12:9
   |
12 |         }
   |         ^
